Fix bug in sizing on mobile Chrome
@aaronspencer Don't remove the loading class if you don't want to see
underlying image, that's what it does.

Also added a jump to the full image when the next button is pressed.

--- a/src/css/viewport.less
+++ b/src/css/viewport.less
@@ -31,6 +31,12 @@
       max-width: 100%;
     }
   }
+  
+  &.loading {
+    img.large {
+      display: none;
+    }
+  }
 
   .status {
     position: absolute;
